# my-awesome-bootloader

./: CMakeLists.txt  README.md  gcc-toolchain.cmake
bootrom/: bootrom.ld  bootrom_main.c  bootrom_rt0.S
cmake_utility/: function_definitions.cmake
